# vector_ai

./: .gitignore  README.md
deploy/: README.md  docker-compose.yml
deploy/nn_worker/: Dockerfile  kafka_pubsub-0.1.0-py3-none-any.whl  requirements.txt  serve_model.py  serve_model2.py
deploy/nn_worker/model/: __init__.py
deploy/test/: consume.py  consume_results.py  prod_pics.py
kafka_pubsub/: README.md  pyproject.toml
kafka_pubsub/kafka_pubsub/: __init__.py  client.py  services.py
kafka_pubsub/tests/: test_kafka_pubsub.py
nn/: README.md  eval.py  model.py  pad.ipynb  train.py  tuning.py
nn/data/test/: labels.json
nn/data/train/: labels.json
nn/utils/: __init__.py  mnist_reader.py  nn_utils.py  preprocessing.py
